content/css/screenshot.less
#options-section {
  background-color: gainsboro;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  line-height: 25px;
  padding: 5px 0px;
  width: 100%;
}
.option-title {
  padding-right: 5px;
}
#canvas {
  display: none;
}
.ui-state-default .ui-icon {
  background-image: url("../images/ui-icons_222222_256x240.png");
}
#loading-div {
  display: none;
  text-align: center;
  width: 100%;
}
#loading {
  margin-top: 5px;
}
#screenshot {
  display: block;
  margin: auto;
  padding-top: 25px;
}
.ui-dialog {
  z-index: 91;
}
.jcrop-holder {
  margin: 30px auto auto auto;
  z-index: 90;
}
#new-user-section {
  flex-grow: 1;
  margin-left: 5px;
}
#user-section {
  display: inline-block;
  flex-grow: 2;
}
#end-section {
  margin-right: 5px;
}
#end-section button {
  margin-right: 5px;
}
button {
  padding: 5px;
}
select {
  margin-right: 30px;
  padding-right: 5px;
}
body {
  margin: 0px;
}

